--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Toboolist</title>
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <!--Connect CSS file-->
   <link rel="stylesheet" href="css/style.css">
 
@@ -38,10 +40,10 @@
           <!-- PRECEDENTI -->
           <div class="container-unorder-list">
             <ul class="unorder-list">
-              <li v-for="curList in list" @click="curList.isDone = !curList.isDone">
-                <button class="button-unorder-list-state check">&check;</button>
+              <li v-for="(curList, index) in list" @click="curList.isDone = !curList.isDone">
+                <!-- <button class="button-unorder-list-state check">&check;</button> -->
                 <span :class="{'done': curList.isDone}"  class="list-of-list">{{ curList.task }}</span>
-                <!-- <span class="button-like button-like-blue strikethrough-text">Editoria!</span> -->
+                <span @click="removeTask(index)" class="cancel"><i class="fa-solid fa-xmark"></i></span>
               </li>
             </ul>
           </div>
